# moxie

./: .gitignore  README.md  pyproject.toml
moxie/: pytest.ini
moxie/appointment/: factories.py  models.py  serializers.py  tests.py  views.py
moxie/appointment/migrations/: 0001_initial.py
moxie/medspa/: admin.py  factories.py  models.py  serializers.py
moxie/medspa/migrations/: 0001_initial.py
moxie/moxie/: asgi.py  settings.py  urls.py  wsgi.py
moxie/service/: admin.py  factories.py  models.py  serializers.py  tests.py  views.py
moxie/service/migrations/: 0001_initial.py
